# LLM_DPR

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  dpr_qa_system.py  example.py  example_usage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_project.sh
tests/: test_dpr_qa_system.py
